// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Contribution /> should NOT render invalid preselected convention 1`] = `
.c12 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

.c2 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c11 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c17 {
  position: absolute;
  background-color: #f66663;
  border-radius: 0;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c0 {
  position: absolute;
  top: 0;
  right: 0;
  width: 5rem;
  height: 5rem;
  overflow: hidden;
  color: #fff;
  border-radius: 0 0.6rem 0 0;
}

.c0:before {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border-color: transparent #f66663 transparent transparent;
  border-style: solid;
  border-width: 0 5rem 5rem 0;
  content: "";
}

.c1 {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 1;
  width: 3rem;
  height: 3rem;
}

.c24 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  line-height: 1.625;
  vertical-align: baseline;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
  -webkit-transition: color 250ms linear, text-decoration 250ms linear;
  transition: color 250ms linear, text-decoration 250ms linear;
}

.c24:focus {
  color: #f66663;
}

.c8 {
  color: #3e486e;
  font-size: 1.6rem;
  font-weight: 400;
  margin: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c5 {
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 3.5rem;
  height: 3.5rem;
  margin-right: 2rem;
}

.c5 svg {
  width: 3.5rem;
  height: 3.5rem;
}

.c6 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c19 {
  position: relative;
  display: inline-block;
}

.c21 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c21[type="number"] {
  -moz-appearance: textfield;
}

.c21::-webkit-outer-spin-button,
.c21::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c21:invalid {
  border-color: #eb5757;
}

.c21::-webkit-input-placeholder {
  color: #9298af;
}

.c21::-moz-placeholder {
  color: #9298af;
}

.c21:-ms-input-placeholder {
  color: #9298af;
}

.c21::placeholder {
  color: #9298af;
}

.c21:focus {
  border-color: #7994d4;
}

.c21:focus::-webkit-input-placeholder {
  color: transparent;
}

.c21:focus::-moz-placeholder {
  color: transparent;
}

.c21:focus:-ms-input-placeholder {
  color: transparent;
}

.c21:focus::placeholder {
  color: transparent;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 0.4rem;
  font-weight: 600;
  font-size: 1.4rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: 1.6;
  cursor: pointer;
}

.c7 {
  margin: 0 0 1rem 0;
  color: #f66663;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.625;
}

.c9 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: auto;
  text-align: left;
}

.c14 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: -2.4rem;
  text-align: left;
}

.c10 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c16 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 2.4rem;
  text-align: left;
}

.c20 {
  width: 100%;
}

.c22 {
  margin-top: 2.4rem;
}

.c23 {
  display: block;
  margin-top: 1.6rem;
}

.c25 {
  color: #7994d4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13 {
  padding-bottom: 0;
}

.c3 {
  margin-bottom: 3.2rem;
}

.c15 {
  margin-top: 3.2rem;
}

@media (max-width:600px) {
  .c12 {
    padding: 2.4rem 0;
  }
}

@media (max-width:600px) {
  .c2 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c2 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c24 {
    font-size: 1.4rem;
  }
}

@media print {
  .c24 {
    display: none;
  }
}

@media (max-width:600px) {
  .c5 {
    width: 3rem;
    height: 3rem;
    margin-right: 1rem;
  }

  .c5 svg {
    width: 3rem;
    height: 3rem;
  }
}

@media (max-width:600px) {
  .c19 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c21 {
    padding: 0 1rem;
    padding-right: 2rem;
  }
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c9 {
    margin-bottom: 1rem;
    margin-left: auto;
  }
}

@media (max-width:600px) {
  .c14 {
    margin-bottom: 1rem;
    margin-left: -1rem;
  }
}

@media (max-width:600px) {
  .c10 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c10 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c16 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c16 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c3 {
    margin-bottom: 2rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        aria-hidden="true"
        fill="none"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M11.938 16.5a3.548 3.548 0 0 1 3.562-3.563 3.548 3.548 0 0 1 3.563 3.563 3.548 3.548 0 0 1-3.563 3.563 3.548 3.548 0 0 1-3.563-3.563zm2.062 0c0 .84.66 1.5 1.5 1.5s1.5-.66 1.5-1.5-.66-1.5-1.5-1.5-1.5.66-1.5 1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M25 14.838v3.404l-1.663.87-.474 1.109.554 1.82-2.375 2.376-1.9-.555-1.109.476-.87 1.662h-3.405l-.87-1.663-1.109-.474-1.82.554-2.376-2.375.554-1.9-.475-1.109L6 18.163v-3.405l1.662-.87.475-1.109-.554-1.82 2.375-2.376 1.9.554 1.109-.475.87-1.662h3.405l.87 1.662 1.109.475 1.82-.554 2.376 2.375-.555 1.9.476 1.109 1.662.87zm-4.1 5.112.825-2.025L23 17.25v-1.5l-1.2-.6-.825-2.025.375-1.35-1.05-1.05-1.35.375-2.025-.825L16.25 9h-1.5l-.6 1.2-2.025.825-1.35-.375-1.05 1.05.375 1.35-.825 2.025L8 15.75v1.5l1.2.6.825 2.025-.375 1.35 1.05 1.05 1.35-.375 2.025.825L14.75 24h1.5l.6-1.2 2.025-.825 1.35.375 1.05-1.05-.375-1.35z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="c2 c3"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M17 2 6 13v2c0 1 .398 1 1.076 1h9.693C18.554 16 20 14.657 20 13V4h19a1 1 0 0 1 1 1v27h2V5a3 3 0 0 0-3-3H17zm-.23 12H8L18 4v9c0 .552-.636 1-1.23 1z"
            fill="#4E6896"
            fill-rule="evenodd"
          />
          <path
            d="M27 50v-2H9a1 1 0 0 1-1-1V24s0-1-1-1-1 1-1 1v23a3 3 0 0 0 3 3h18zM7 20a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
            fill="#4E6896"
          />
          <path
            d="M15.053 20C14.47 20 14 20.448 14 21s.471 1 1.053 1h17.894C33.53 22 34 21.552 34 21s-.471-1-1.053-1H15.053zM14 27c0-.552.471-1 1.053-1h17.894c.582 0 1.053.448 1.053 1s-.471 1-1.053 1H15.053C14.47 28 14 27.552 14 27z"
            fill="#FF7067"
          />
          <path
            clip-rule="evenodd"
            d="M36.5 37.938a3.548 3.548 0 0 0-3.563 3.562 3.548 3.548 0 0 0 3.563 3.563 3.548 3.548 0 0 0 3.563-3.563 3.548 3.548 0 0 0-3.563-3.563zm0 5.062c-.84 0-1.5-.66-1.5-1.5s.66-1.5 1.5-1.5 1.5.66 1.5 1.5-.66 1.5-1.5 1.5z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M46 43.242v-3.404l-1.663-.871-.475-1.109.555-1.9-2.375-2.375-1.821.555-1.108-.475L38.241 32h-3.404l-.871 1.663-1.109.475-1.9-.555-2.375 2.375.555 1.821-.476 1.108-1.662.871v3.404l1.663.871.474 1.109-.554 1.9 2.375 2.375 1.821-.555 1.108.475.871 1.663h3.404l.871-1.663 1.109-.475 1.9.555 2.375-2.375-.555-1.821.475-1.108L46 43.241zm-3.275-.317L41.9 44.95l.375 1.35-1.05 1.05-1.35-.375-2.025.825-.6 1.2h-1.5l-.675-1.275-2.025-.825-1.35.375-1.05-1.05.375-1.35-.825-2.025-1.2-.6v-1.5l1.275-.675.825-2.025-.375-1.35 1.05-1.05 1.35.375 2.025-.825.6-1.2h1.5l.675 1.275 2.025.825 1.35-.375 1.05 1.05-.375 1.35.825 2.025 1.2.6v1.5l-1.275.675z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c6"
      >
        <p
          aria-level="2"
          class="c7"
          role="heading"
        >
          Page personnalisable
        </p>
        <p
          class="c8"
        >
          Le contenu de cette page peut être personnalisé en fonction de votre situation.
          <br />
          <a
            href="#customisation"
          >
            Voir en bas de page
          </a>
           pour renseigner votre convention collective.
        </p>
      </div>
    </div>
  </div>
  <section>
    <div
      class="c9"
    >
      <h2
        class="c10"
      >
        <span
          class="c11"
        />
        Que dit le code du travail ?
      </h2>
    </div>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <div
    class="c12 c13"
  >
    <div
      class="c2"
    >
      <div
        class="c14 c15"
        id="customisation"
      >
        <h2
          class="c16"
        >
          <span
            class="c17"
          />
          Que dit votre convention collective ?
        </h2>
      </div>
      <label
        class="c18"
        for="convention-search"
      >
        Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
      </label>
      <span
        class="c19 c20"
      >
        <input
          class="c21"
          id="convention-search"
          name="q"
          placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
          type="search"
          value=""
        />
      </span>
      
      <p
        class="c22"
      >
        Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
        <span
          class="c23"
        >
          Consultez
           
          <button
            class="c24 c25"
            type="button"
          >
            notre aide
          </button>
          .
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`<Contribution /> should render answer references 1`] = `
.c12 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

.c2 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c11 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c17 {
  position: absolute;
  background-color: #f66663;
  border-radius: 0;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c0 {
  position: absolute;
  top: 0;
  right: 0;
  width: 5rem;
  height: 5rem;
  overflow: hidden;
  color: #fff;
  border-radius: 0 0.6rem 0 0;
}

.c0:before {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border-color: transparent #f66663 transparent transparent;
  border-style: solid;
  border-width: 0 5rem 5rem 0;
  content: "";
}

.c1 {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 1;
  width: 3rem;
  height: 3rem;
}

.c24 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  line-height: 1.625;
  vertical-align: baseline;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
  -webkit-transition: color 250ms linear, text-decoration 250ms linear;
  transition: color 250ms linear, text-decoration 250ms linear;
}

.c24:focus {
  color: #f66663;
}

.c8 {
  color: #3e486e;
  font-size: 1.6rem;
  font-weight: 400;
  margin: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c5 {
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 3.5rem;
  height: 3.5rem;
  margin-right: 2rem;
}

.c5 svg {
  width: 3.5rem;
  height: 3.5rem;
}

.c6 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c19 {
  position: relative;
  display: inline-block;
}

.c21 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c21[type="number"] {
  -moz-appearance: textfield;
}

.c21::-webkit-outer-spin-button,
.c21::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c21:invalid {
  border-color: #eb5757;
}

.c21::-webkit-input-placeholder {
  color: #9298af;
}

.c21::-moz-placeholder {
  color: #9298af;
}

.c21:-ms-input-placeholder {
  color: #9298af;
}

.c21::placeholder {
  color: #9298af;
}

.c21:focus {
  border-color: #7994d4;
}

.c21:focus::-webkit-input-placeholder {
  color: transparent;
}

.c21:focus::-moz-placeholder {
  color: transparent;
}

.c21:focus:-ms-input-placeholder {
  color: transparent;
}

.c21:focus::placeholder {
  color: transparent;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 0.4rem;
  font-weight: 600;
  font-size: 1.4rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: 1.6;
  cursor: pointer;
}

.c7 {
  margin: 0 0 1rem 0;
  color: #f66663;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.625;
}

.c9 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: auto;
  text-align: left;
}

.c14 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: -2.4rem;
  text-align: left;
}

.c10 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c16 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 2.4rem;
  text-align: left;
}

.c20 {
  width: 100%;
}

.c22 {
  margin-top: 2.4rem;
}

.c23 {
  display: block;
  margin-top: 1.6rem;
}

.c25 {
  color: #7994d4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13 {
  padding-bottom: 0;
}

.c3 {
  margin-bottom: 3.2rem;
}

.c15 {
  margin-top: 3.2rem;
}

@media (max-width:600px) {
  .c12 {
    padding: 2.4rem 0;
  }
}

@media (max-width:600px) {
  .c2 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c2 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c24 {
    font-size: 1.4rem;
  }
}

@media print {
  .c24 {
    display: none;
  }
}

@media (max-width:600px) {
  .c5 {
    width: 3rem;
    height: 3rem;
    margin-right: 1rem;
  }

  .c5 svg {
    width: 3rem;
    height: 3rem;
  }
}

@media (max-width:600px) {
  .c19 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c21 {
    padding: 0 1rem;
    padding-right: 2rem;
  }
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c9 {
    margin-bottom: 1rem;
    margin-left: auto;
  }
}

@media (max-width:600px) {
  .c14 {
    margin-bottom: 1rem;
    margin-left: -1rem;
  }
}

@media (max-width:600px) {
  .c10 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c10 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c16 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c16 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c3 {
    margin-bottom: 2rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        aria-hidden="true"
        fill="none"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M11.938 16.5a3.548 3.548 0 0 1 3.562-3.563 3.548 3.548 0 0 1 3.563 3.563 3.548 3.548 0 0 1-3.563 3.563 3.548 3.548 0 0 1-3.563-3.563zm2.062 0c0 .84.66 1.5 1.5 1.5s1.5-.66 1.5-1.5-.66-1.5-1.5-1.5-1.5.66-1.5 1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M25 14.838v3.404l-1.663.87-.474 1.109.554 1.82-2.375 2.376-1.9-.555-1.109.476-.87 1.662h-3.405l-.87-1.663-1.109-.474-1.82.554-2.376-2.375.554-1.9-.475-1.109L6 18.163v-3.405l1.662-.87.475-1.109-.554-1.82 2.375-2.376 1.9.554 1.109-.475.87-1.662h3.405l.87 1.662 1.109.475 1.82-.554 2.376 2.375-.555 1.9.476 1.109 1.662.87zm-4.1 5.112.825-2.025L23 17.25v-1.5l-1.2-.6-.825-2.025.375-1.35-1.05-1.05-1.35.375-2.025-.825L16.25 9h-1.5l-.6 1.2-2.025.825-1.35-.375-1.05 1.05.375 1.35-.825 2.025L8 15.75v1.5l1.2.6.825 2.025-.375 1.35 1.05 1.05 1.35-.375 2.025.825L14.75 24h1.5l.6-1.2 2.025-.825 1.35.375 1.05-1.05-.375-1.35z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="c2 c3"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M17 2 6 13v2c0 1 .398 1 1.076 1h9.693C18.554 16 20 14.657 20 13V4h19a1 1 0 0 1 1 1v27h2V5a3 3 0 0 0-3-3H17zm-.23 12H8L18 4v9c0 .552-.636 1-1.23 1z"
            fill="#4E6896"
            fill-rule="evenodd"
          />
          <path
            d="M27 50v-2H9a1 1 0 0 1-1-1V24s0-1-1-1-1 1-1 1v23a3 3 0 0 0 3 3h18zM7 20a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
            fill="#4E6896"
          />
          <path
            d="M15.053 20C14.47 20 14 20.448 14 21s.471 1 1.053 1h17.894C33.53 22 34 21.552 34 21s-.471-1-1.053-1H15.053zM14 27c0-.552.471-1 1.053-1h17.894c.582 0 1.053.448 1.053 1s-.471 1-1.053 1H15.053C14.47 28 14 27.552 14 27z"
            fill="#FF7067"
          />
          <path
            clip-rule="evenodd"
            d="M36.5 37.938a3.548 3.548 0 0 0-3.563 3.562 3.548 3.548 0 0 0 3.563 3.563 3.548 3.548 0 0 0 3.563-3.563 3.548 3.548 0 0 0-3.563-3.563zm0 5.062c-.84 0-1.5-.66-1.5-1.5s.66-1.5 1.5-1.5 1.5.66 1.5 1.5-.66 1.5-1.5 1.5z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M46 43.242v-3.404l-1.663-.871-.475-1.109.555-1.9-2.375-2.375-1.821.555-1.108-.475L38.241 32h-3.404l-.871 1.663-1.109.475-1.9-.555-2.375 2.375.555 1.821-.476 1.108-1.662.871v3.404l1.663.871.474 1.109-.554 1.9 2.375 2.375 1.821-.555 1.108.475.871 1.663h3.404l.871-1.663 1.109-.475 1.9.555 2.375-2.375-.555-1.821.475-1.108L46 43.241zm-3.275-.317L41.9 44.95l.375 1.35-1.05 1.05-1.35-.375-2.025.825-.6 1.2h-1.5l-.675-1.275-2.025-.825-1.35.375-1.05-1.05.375-1.35-.825-2.025-1.2-.6v-1.5l1.275-.675.825-2.025-.375-1.35 1.05-1.05 1.35.375 2.025-.825.6-1.2h1.5l.675 1.275 2.025.825 1.35-.375 1.05 1.05-.375 1.35.825 2.025 1.2.6v1.5l-1.275.675z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c6"
      >
        <p
          aria-level="2"
          class="c7"
          role="heading"
        >
          Page personnalisable
        </p>
        <p
          class="c8"
        >
          Le contenu de cette page peut être personnalisé en fonction de votre situation.
          <br />
          <a
            href="#customisation"
          >
            Voir en bas de page
          </a>
           pour renseigner votre convention collective.
        </p>
      </div>
    </div>
  </div>
  <section>
    <div
      class="c9"
    >
      <h2
        class="c10"
      >
        <span
          class="c11"
        />
        Que dit le code du travail ?
      </h2>
    </div>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <div
    class="c12 c13"
  >
    <div
      class="c2"
    >
      <div
        class="c14 c15"
        id="customisation"
      >
        <h2
          class="c16"
        >
          <span
            class="c17"
          />
          Que dit votre convention collective ?
        </h2>
      </div>
      <label
        class="c18"
        for="convention-search"
      >
        Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
      </label>
      <span
        class="c19 c20"
      >
        <input
          class="c21"
          id="convention-search"
          name="q"
          placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
          type="search"
          value=""
        />
      </span>
      
      <p
        class="c22"
      >
        Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
        <span
          class="c23"
        >
          Consultez
           
          <button
            class="c24 c25"
            type="button"
          >
            notre aide
          </button>
          .
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`<Contribution /> should render preselected convention 1`] = `
.c12 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

.c2 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c11 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c17 {
  position: absolute;
  background-color: #f66663;
  border-radius: 0;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c0 {
  position: absolute;
  top: 0;
  right: 0;
  width: 5rem;
  height: 5rem;
  overflow: hidden;
  color: #fff;
  border-radius: 0 0.6rem 0 0;
}

.c0:before {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border-color: transparent #f66663 transparent transparent;
  border-style: solid;
  border-width: 0 5rem 5rem 0;
  content: "";
}

.c1 {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 1;
  width: 3rem;
  height: 3rem;
}

.c24 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  line-height: 1.625;
  vertical-align: baseline;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
  -webkit-transition: color 250ms linear, text-decoration 250ms linear;
  transition: color 250ms linear, text-decoration 250ms linear;
}

.c24:focus {
  color: #f66663;
}

.c8 {
  color: #3e486e;
  font-size: 1.6rem;
  font-weight: 400;
  margin: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c5 {
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 3.5rem;
  height: 3.5rem;
  margin-right: 2rem;
}

.c5 svg {
  width: 3.5rem;
  height: 3.5rem;
}

.c6 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c19 {
  position: relative;
  display: inline-block;
}

.c21 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c21[type="number"] {
  -moz-appearance: textfield;
}

.c21::-webkit-outer-spin-button,
.c21::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c21:invalid {
  border-color: #eb5757;
}

.c21::-webkit-input-placeholder {
  color: #9298af;
}

.c21::-moz-placeholder {
  color: #9298af;
}

.c21:-ms-input-placeholder {
  color: #9298af;
}

.c21::placeholder {
  color: #9298af;
}

.c21:focus {
  border-color: #7994d4;
}

.c21:focus::-webkit-input-placeholder {
  color: transparent;
}

.c21:focus::-moz-placeholder {
  color: transparent;
}

.c21:focus:-ms-input-placeholder {
  color: transparent;
}

.c21:focus::placeholder {
  color: transparent;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 0.4rem;
  font-weight: 600;
  font-size: 1.4rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: 1.6;
  cursor: pointer;
}

.c7 {
  margin: 0 0 1rem 0;
  color: #f66663;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.625;
}

.c9 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: auto;
  text-align: left;
}

.c14 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: -2.4rem;
  text-align: left;
}

.c10 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c16 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 2.4rem;
  text-align: left;
}

.c20 {
  width: 100%;
}

.c22 {
  margin-top: 2.4rem;
}

.c23 {
  display: block;
  margin-top: 1.6rem;
}

.c25 {
  color: #7994d4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13 {
  padding-bottom: 0;
}

.c3 {
  margin-bottom: 3.2rem;
}

.c15 {
  margin-top: 3.2rem;
}

@media (max-width:600px) {
  .c12 {
    padding: 2.4rem 0;
  }
}

@media (max-width:600px) {
  .c2 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c2 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c24 {
    font-size: 1.4rem;
  }
}

@media print {
  .c24 {
    display: none;
  }
}

@media (max-width:600px) {
  .c5 {
    width: 3rem;
    height: 3rem;
    margin-right: 1rem;
  }

  .c5 svg {
    width: 3rem;
    height: 3rem;
  }
}

@media (max-width:600px) {
  .c19 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c21 {
    padding: 0 1rem;
    padding-right: 2rem;
  }
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c9 {
    margin-bottom: 1rem;
    margin-left: auto;
  }
}

@media (max-width:600px) {
  .c14 {
    margin-bottom: 1rem;
    margin-left: -1rem;
  }
}

@media (max-width:600px) {
  .c10 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c10 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c16 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c16 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c3 {
    margin-bottom: 2rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        aria-hidden="true"
        fill="none"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M11.938 16.5a3.548 3.548 0 0 1 3.562-3.563 3.548 3.548 0 0 1 3.563 3.563 3.548 3.548 0 0 1-3.563 3.563 3.548 3.548 0 0 1-3.563-3.563zm2.062 0c0 .84.66 1.5 1.5 1.5s1.5-.66 1.5-1.5-.66-1.5-1.5-1.5-1.5.66-1.5 1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M25 14.838v3.404l-1.663.87-.474 1.109.554 1.82-2.375 2.376-1.9-.555-1.109.476-.87 1.662h-3.405l-.87-1.663-1.109-.474-1.82.554-2.376-2.375.554-1.9-.475-1.109L6 18.163v-3.405l1.662-.87.475-1.109-.554-1.82 2.375-2.376 1.9.554 1.109-.475.87-1.662h3.405l.87 1.662 1.109.475 1.82-.554 2.376 2.375-.555 1.9.476 1.109 1.662.87zm-4.1 5.112.825-2.025L23 17.25v-1.5l-1.2-.6-.825-2.025.375-1.35-1.05-1.05-1.35.375-2.025-.825L16.25 9h-1.5l-.6 1.2-2.025.825-1.35-.375-1.05 1.05.375 1.35-.825 2.025L8 15.75v1.5l1.2.6.825 2.025-.375 1.35 1.05 1.05 1.35-.375 2.025.825L14.75 24h1.5l.6-1.2 2.025-.825 1.35.375 1.05-1.05-.375-1.35z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="c2 c3"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M17 2 6 13v2c0 1 .398 1 1.076 1h9.693C18.554 16 20 14.657 20 13V4h19a1 1 0 0 1 1 1v27h2V5a3 3 0 0 0-3-3H17zm-.23 12H8L18 4v9c0 .552-.636 1-1.23 1z"
            fill="#4E6896"
            fill-rule="evenodd"
          />
          <path
            d="M27 50v-2H9a1 1 0 0 1-1-1V24s0-1-1-1-1 1-1 1v23a3 3 0 0 0 3 3h18zM7 20a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
            fill="#4E6896"
          />
          <path
            d="M15.053 20C14.47 20 14 20.448 14 21s.471 1 1.053 1h17.894C33.53 22 34 21.552 34 21s-.471-1-1.053-1H15.053zM14 27c0-.552.471-1 1.053-1h17.894c.582 0 1.053.448 1.053 1s-.471 1-1.053 1H15.053C14.47 28 14 27.552 14 27z"
            fill="#FF7067"
          />
          <path
            clip-rule="evenodd"
            d="M36.5 37.938a3.548 3.548 0 0 0-3.563 3.562 3.548 3.548 0 0 0 3.563 3.563 3.548 3.548 0 0 0 3.563-3.563 3.548 3.548 0 0 0-3.563-3.563zm0 5.062c-.84 0-1.5-.66-1.5-1.5s.66-1.5 1.5-1.5 1.5.66 1.5 1.5-.66 1.5-1.5 1.5z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M46 43.242v-3.404l-1.663-.871-.475-1.109.555-1.9-2.375-2.375-1.821.555-1.108-.475L38.241 32h-3.404l-.871 1.663-1.109.475-1.9-.555-2.375 2.375.555 1.821-.476 1.108-1.662.871v3.404l1.663.871.474 1.109-.554 1.9 2.375 2.375 1.821-.555 1.108.475.871 1.663h3.404l.871-1.663 1.109-.475 1.9.555 2.375-2.375-.555-1.821.475-1.108L46 43.241zm-3.275-.317L41.9 44.95l.375 1.35-1.05 1.05-1.35-.375-2.025.825-.6 1.2h-1.5l-.675-1.275-2.025-.825-1.35.375-1.05-1.05.375-1.35-.825-2.025-1.2-.6v-1.5l1.275-.675.825-2.025-.375-1.35 1.05-1.05 1.35.375 2.025-.825.6-1.2h1.5l.675 1.275 2.025.825 1.35-.375 1.05 1.05-.375 1.35.825 2.025 1.2.6v1.5l-1.275.675z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c6"
      >
        <p
          aria-level="2"
          class="c7"
          role="heading"
        >
          Page personnalisable
        </p>
        <p
          class="c8"
        >
          Le contenu de cette page peut être personnalisé en fonction de votre situation.
          <br />
          <a
            href="#customisation"
          >
            Voir en bas de page
          </a>
           pour renseigner votre convention collective.
        </p>
      </div>
    </div>
  </div>
  <section>
    <div
      class="c9"
    >
      <h2
        class="c10"
      >
        <span
          class="c11"
        />
        Que dit le code du travail ?
      </h2>
    </div>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <div
    class="c12 c13"
  >
    <div
      class="c2"
    >
      <div
        class="c14 c15"
        id="customisation"
      >
        <h2
          class="c16"
        >
          <span
            class="c17"
          />
          Que dit votre convention collective ?
        </h2>
      </div>
      <label
        class="c18"
        for="convention-search"
      >
        Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
      </label>
      <span
        class="c19 c20"
      >
        <input
          class="c21"
          id="convention-search"
          name="q"
          placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
          type="search"
          value=""
        />
      </span>
      
      <p
        class="c22"
      >
        Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
        <span
          class="c23"
        >
          Consultez
           
          <button
            class="c24 c25"
            type="button"
          >
            notre aide
          </button>
          .
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`<Contribution /> should render with both answers 1`] = `
.c12 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

.c2 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c11 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c17 {
  position: absolute;
  background-color: #f66663;
  border-radius: 0;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c0 {
  position: absolute;
  top: 0;
  right: 0;
  width: 5rem;
  height: 5rem;
  overflow: hidden;
  color: #fff;
  border-radius: 0 0.6rem 0 0;
}

.c0:before {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border-color: transparent #f66663 transparent transparent;
  border-style: solid;
  border-width: 0 5rem 5rem 0;
  content: "";
}

.c1 {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 1;
  width: 3rem;
  height: 3rem;
}

.c24 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  line-height: 1.625;
  vertical-align: baseline;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
  -webkit-transition: color 250ms linear, text-decoration 250ms linear;
  transition: color 250ms linear, text-decoration 250ms linear;
}

.c24:focus {
  color: #f66663;
}

.c8 {
  color: #3e486e;
  font-size: 1.6rem;
  font-weight: 400;
  margin: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c5 {
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 3.5rem;
  height: 3.5rem;
  margin-right: 2rem;
}

.c5 svg {
  width: 3.5rem;
  height: 3.5rem;
}

.c6 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c19 {
  position: relative;
  display: inline-block;
}

.c21 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c21[type="number"] {
  -moz-appearance: textfield;
}

.c21::-webkit-outer-spin-button,
.c21::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c21:invalid {
  border-color: #eb5757;
}

.c21::-webkit-input-placeholder {
  color: #9298af;
}

.c21::-moz-placeholder {
  color: #9298af;
}

.c21:-ms-input-placeholder {
  color: #9298af;
}

.c21::placeholder {
  color: #9298af;
}

.c21:focus {
  border-color: #7994d4;
}

.c21:focus::-webkit-input-placeholder {
  color: transparent;
}

.c21:focus::-moz-placeholder {
  color: transparent;
}

.c21:focus:-ms-input-placeholder {
  color: transparent;
}

.c21:focus::placeholder {
  color: transparent;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 0.4rem;
  font-weight: 600;
  font-size: 1.4rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: 1.6;
  cursor: pointer;
}

.c7 {
  margin: 0 0 1rem 0;
  color: #f66663;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.625;
}

.c9 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: auto;
  text-align: left;
}

.c14 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: -2.4rem;
  text-align: left;
}

.c10 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c16 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 2.4rem;
  text-align: left;
}

.c20 {
  width: 100%;
}

.c22 {
  margin-top: 2.4rem;
}

.c23 {
  display: block;
  margin-top: 1.6rem;
}

.c25 {
  color: #7994d4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13 {
  padding-bottom: 0;
}

.c3 {
  margin-bottom: 3.2rem;
}

.c15 {
  margin-top: 3.2rem;
}

@media (max-width:600px) {
  .c12 {
    padding: 2.4rem 0;
  }
}

@media (max-width:600px) {
  .c2 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c2 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c24 {
    font-size: 1.4rem;
  }
}

@media print {
  .c24 {
    display: none;
  }
}

@media (max-width:600px) {
  .c5 {
    width: 3rem;
    height: 3rem;
    margin-right: 1rem;
  }

  .c5 svg {
    width: 3rem;
    height: 3rem;
  }
}

@media (max-width:600px) {
  .c19 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c21 {
    padding: 0 1rem;
    padding-right: 2rem;
  }
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c9 {
    margin-bottom: 1rem;
    margin-left: auto;
  }
}

@media (max-width:600px) {
  .c14 {
    margin-bottom: 1rem;
    margin-left: -1rem;
  }
}

@media (max-width:600px) {
  .c10 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c10 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c16 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c16 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c3 {
    margin-bottom: 2rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        aria-hidden="true"
        fill="none"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M11.938 16.5a3.548 3.548 0 0 1 3.562-3.563 3.548 3.548 0 0 1 3.563 3.563 3.548 3.548 0 0 1-3.563 3.563 3.548 3.548 0 0 1-3.563-3.563zm2.062 0c0 .84.66 1.5 1.5 1.5s1.5-.66 1.5-1.5-.66-1.5-1.5-1.5-1.5.66-1.5 1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M25 14.838v3.404l-1.663.87-.474 1.109.554 1.82-2.375 2.376-1.9-.555-1.109.476-.87 1.662h-3.405l-.87-1.663-1.109-.474-1.82.554-2.376-2.375.554-1.9-.475-1.109L6 18.163v-3.405l1.662-.87.475-1.109-.554-1.82 2.375-2.376 1.9.554 1.109-.475.87-1.662h3.405l.87 1.662 1.109.475 1.82-.554 2.376 2.375-.555 1.9.476 1.109 1.662.87zm-4.1 5.112.825-2.025L23 17.25v-1.5l-1.2-.6-.825-2.025.375-1.35-1.05-1.05-1.35.375-2.025-.825L16.25 9h-1.5l-.6 1.2-2.025.825-1.35-.375-1.05 1.05.375 1.35-.825 2.025L8 15.75v1.5l1.2.6.825 2.025-.375 1.35 1.05 1.05 1.35-.375 2.025.825L14.75 24h1.5l.6-1.2 2.025-.825 1.35.375 1.05-1.05-.375-1.35z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="c2 c3"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M17 2 6 13v2c0 1 .398 1 1.076 1h9.693C18.554 16 20 14.657 20 13V4h19a1 1 0 0 1 1 1v27h2V5a3 3 0 0 0-3-3H17zm-.23 12H8L18 4v9c0 .552-.636 1-1.23 1z"
            fill="#4E6896"
            fill-rule="evenodd"
          />
          <path
            d="M27 50v-2H9a1 1 0 0 1-1-1V24s0-1-1-1-1 1-1 1v23a3 3 0 0 0 3 3h18zM7 20a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
            fill="#4E6896"
          />
          <path
            d="M15.053 20C14.47 20 14 20.448 14 21s.471 1 1.053 1h17.894C33.53 22 34 21.552 34 21s-.471-1-1.053-1H15.053zM14 27c0-.552.471-1 1.053-1h17.894c.582 0 1.053.448 1.053 1s-.471 1-1.053 1H15.053C14.47 28 14 27.552 14 27z"
            fill="#FF7067"
          />
          <path
            clip-rule="evenodd"
            d="M36.5 37.938a3.548 3.548 0 0 0-3.563 3.562 3.548 3.548 0 0 0 3.563 3.563 3.548 3.548 0 0 0 3.563-3.563 3.548 3.548 0 0 0-3.563-3.563zm0 5.062c-.84 0-1.5-.66-1.5-1.5s.66-1.5 1.5-1.5 1.5.66 1.5 1.5-.66 1.5-1.5 1.5z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M46 43.242v-3.404l-1.663-.871-.475-1.109.555-1.9-2.375-2.375-1.821.555-1.108-.475L38.241 32h-3.404l-.871 1.663-1.109.475-1.9-.555-2.375 2.375.555 1.821-.476 1.108-1.662.871v3.404l1.663.871.474 1.109-.554 1.9 2.375 2.375 1.821-.555 1.108.475.871 1.663h3.404l.871-1.663 1.109-.475 1.9.555 2.375-2.375-.555-1.821.475-1.108L46 43.241zm-3.275-.317L41.9 44.95l.375 1.35-1.05 1.05-1.35-.375-2.025.825-.6 1.2h-1.5l-.675-1.275-2.025-.825-1.35.375-1.05-1.05.375-1.35-.825-2.025-1.2-.6v-1.5l1.275-.675.825-2.025-.375-1.35 1.05-1.05 1.35.375 2.025-.825.6-1.2h1.5l.675 1.275 2.025.825 1.35-.375 1.05 1.05-.375 1.35.825 2.025 1.2.6v1.5l-1.275.675z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c6"
      >
        <p
          aria-level="2"
          class="c7"
          role="heading"
        >
          Page personnalisable
        </p>
        <p
          class="c8"
        >
          Le contenu de cette page peut être personnalisé en fonction de votre situation.
          <br />
          <a
            href="#customisation"
          >
            Voir en bas de page
          </a>
           pour renseigner votre convention collective.
        </p>
      </div>
    </div>
  </div>
  <section>
    <div
      class="c9"
    >
      <h2
        class="c10"
      >
        <span
          class="c11"
        />
        Que dit le code du travail ?
      </h2>
    </div>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <div
    class="c12 c13"
  >
    <div
      class="c2"
    >
      <div
        class="c14 c15"
        id="customisation"
      >
        <h2
          class="c16"
        >
          <span
            class="c17"
          />
          Que dit votre convention collective ?
        </h2>
      </div>
      <label
        class="c18"
        for="convention-search"
      >
        Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
      </label>
      <span
        class="c19 c20"
      >
        <input
          class="c21"
          id="convention-search"
          name="q"
          placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
          type="search"
          value=""
        />
      </span>
      
      <p
        class="c22"
      >
        Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
        <span
          class="c23"
        >
          Consultez
           
          <button
            class="c24 c25"
            type="button"
          >
            notre aide
          </button>
          .
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`<Contribution /> should render with conventions answer 1`] = `
.c9 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

.c2 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c14 {
  position: absolute;
  background-color: #f66663;
  border-radius: 0;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c0 {
  position: absolute;
  top: 0;
  right: 0;
  width: 5rem;
  height: 5rem;
  overflow: hidden;
  color: #fff;
  border-radius: 0 0.6rem 0 0;
}

.c0:before {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border-color: transparent #f66663 transparent transparent;
  border-style: solid;
  border-width: 0 5rem 5rem 0;
  content: "";
}

.c1 {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 1;
  width: 3rem;
  height: 3rem;
}

.c21 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  line-height: 1.625;
  vertical-align: baseline;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
  -webkit-transition: color 250ms linear, text-decoration 250ms linear;
  transition: color 250ms linear, text-decoration 250ms linear;
}

.c21:focus {
  color: #f66663;
}

.c8 {
  color: #3e486e;
  font-size: 1.6rem;
  font-weight: 400;
  margin: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c5 {
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 3.5rem;
  height: 3.5rem;
  margin-right: 2rem;
}

.c5 svg {
  width: 3.5rem;
  height: 3.5rem;
}

.c6 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c16 {
  position: relative;
  display: inline-block;
}

.c18 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c18[type="number"] {
  -moz-appearance: textfield;
}

.c18::-webkit-outer-spin-button,
.c18::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c18:invalid {
  border-color: #eb5757;
}

.c18::-webkit-input-placeholder {
  color: #9298af;
}

.c18::-moz-placeholder {
  color: #9298af;
}

.c18:-ms-input-placeholder {
  color: #9298af;
}

.c18::placeholder {
  color: #9298af;
}

.c18:focus {
  border-color: #7994d4;
}

.c18:focus::-webkit-input-placeholder {
  color: transparent;
}

.c18:focus::-moz-placeholder {
  color: transparent;
}

.c18:focus:-ms-input-placeholder {
  color: transparent;
}

.c18:focus::placeholder {
  color: transparent;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 0.4rem;
  font-weight: 600;
  font-size: 1.4rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: 1.6;
  cursor: pointer;
}

.c7 {
  margin: 0 0 1rem 0;
  color: #f66663;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.625;
}

.c11 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: -2.4rem;
  text-align: left;
}

.c13 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 2.4rem;
  text-align: left;
}

.c17 {
  width: 100%;
}

.c19 {
  margin-top: 2.4rem;
}

.c20 {
  display: block;
  margin-top: 1.6rem;
}

.c22 {
  color: #7994d4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c10 {
  padding-bottom: 0;
}

.c3 {
  margin-bottom: 3.2rem;
}

.c12 {
  margin-top: 0;
}

@media (max-width:600px) {
  .c9 {
    padding: 2.4rem 0;
  }
}

@media (max-width:600px) {
  .c2 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c2 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c21 {
    font-size: 1.4rem;
  }
}

@media print {
  .c21 {
    display: none;
  }
}

@media (max-width:600px) {
  .c5 {
    width: 3rem;
    height: 3rem;
    margin-right: 1rem;
  }

  .c5 svg {
    width: 3rem;
    height: 3rem;
  }
}

@media (max-width:600px) {
  .c16 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c18 {
    padding: 0 1rem;
    padding-right: 2rem;
  }
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c11 {
    margin-bottom: 1rem;
    margin-left: -1rem;
  }
}

@media (max-width:600px) {
  .c13 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c13 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c3 {
    margin-bottom: 2rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        aria-hidden="true"
        fill="none"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M11.938 16.5a3.548 3.548 0 0 1 3.562-3.563 3.548 3.548 0 0 1 3.563 3.563 3.548 3.548 0 0 1-3.563 3.563 3.548 3.548 0 0 1-3.563-3.563zm2.062 0c0 .84.66 1.5 1.5 1.5s1.5-.66 1.5-1.5-.66-1.5-1.5-1.5-1.5.66-1.5 1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M25 14.838v3.404l-1.663.87-.474 1.109.554 1.82-2.375 2.376-1.9-.555-1.109.476-.87 1.662h-3.405l-.87-1.663-1.109-.474-1.82.554-2.376-2.375.554-1.9-.475-1.109L6 18.163v-3.405l1.662-.87.475-1.109-.554-1.82 2.375-2.376 1.9.554 1.109-.475.87-1.662h3.405l.87 1.662 1.109.475 1.82-.554 2.376 2.375-.555 1.9.476 1.109 1.662.87zm-4.1 5.112.825-2.025L23 17.25v-1.5l-1.2-.6-.825-2.025.375-1.35-1.05-1.05-1.35.375-2.025-.825L16.25 9h-1.5l-.6 1.2-2.025.825-1.35-.375-1.05 1.05.375 1.35-.825 2.025L8 15.75v1.5l1.2.6.825 2.025-.375 1.35 1.05 1.05 1.35-.375 2.025.825L14.75 24h1.5l.6-1.2 2.025-.825 1.35.375 1.05-1.05-.375-1.35z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="c2 c3"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M17 2 6 13v2c0 1 .398 1 1.076 1h9.693C18.554 16 20 14.657 20 13V4h19a1 1 0 0 1 1 1v27h2V5a3 3 0 0 0-3-3H17zm-.23 12H8L18 4v9c0 .552-.636 1-1.23 1z"
            fill="#4E6896"
            fill-rule="evenodd"
          />
          <path
            d="M27 50v-2H9a1 1 0 0 1-1-1V24s0-1-1-1-1 1-1 1v23a3 3 0 0 0 3 3h18zM7 20a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
            fill="#4E6896"
          />
          <path
            d="M15.053 20C14.47 20 14 20.448 14 21s.471 1 1.053 1h17.894C33.53 22 34 21.552 34 21s-.471-1-1.053-1H15.053zM14 27c0-.552.471-1 1.053-1h17.894c.582 0 1.053.448 1.053 1s-.471 1-1.053 1H15.053C14.47 28 14 27.552 14 27z"
            fill="#FF7067"
          />
          <path
            clip-rule="evenodd"
            d="M36.5 37.938a3.548 3.548 0 0 0-3.563 3.562 3.548 3.548 0 0 0 3.563 3.563 3.548 3.548 0 0 0 3.563-3.563 3.548 3.548 0 0 0-3.563-3.563zm0 5.062c-.84 0-1.5-.66-1.5-1.5s.66-1.5 1.5-1.5 1.5.66 1.5 1.5-.66 1.5-1.5 1.5z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M46 43.242v-3.404l-1.663-.871-.475-1.109.555-1.9-2.375-2.375-1.821.555-1.108-.475L38.241 32h-3.404l-.871 1.663-1.109.475-1.9-.555-2.375 2.375.555 1.821-.476 1.108-1.662.871v3.404l1.663.871.474 1.109-.554 1.9 2.375 2.375 1.821-.555 1.108.475.871 1.663h3.404l.871-1.663 1.109-.475 1.9.555 2.375-2.375-.555-1.821.475-1.108L46 43.241zm-3.275-.317L41.9 44.95l.375 1.35-1.05 1.05-1.35-.375-2.025.825-.6 1.2h-1.5l-.675-1.275-2.025-.825-1.35.375-1.05-1.05.375-1.35-.825-2.025-1.2-.6v-1.5l1.275-.675.825-2.025-.375-1.35 1.05-1.05 1.35.375 2.025-.825.6-1.2h1.5l.675 1.275 2.025.825 1.35-.375 1.05 1.05-.375 1.35.825 2.025 1.2.6v1.5l-1.275.675z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c6"
      >
        <p
          aria-level="2"
          class="c7"
          role="heading"
        >
          Page personnalisable
        </p>
        <p
          class="c8"
        >
          Le contenu de cette page peut être personnalisé en fonction de votre situation.
          <br />
          <a
            href="#customisation"
          >
            Voir en bas de page
          </a>
           pour renseigner votre convention collective.
        </p>
      </div>
    </div>
  </div>
  <div
    class="c9 c10"
  >
    <div
      class="c2"
    >
      <div
        class="c11 c12"
        id="customisation"
      >
        <h2
          class="c13"
        >
          <span
            class="c14"
          />
          Que dit votre convention collective ?
        </h2>
      </div>
      <label
        class="c15"
        for="convention-search"
      >
        Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
      </label>
      <span
        class="c16 c17"
      >
        <input
          class="c18"
          id="convention-search"
          name="q"
          placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
          type="search"
          value=""
        />
      </span>
      
      <p
        class="c19"
      >
        Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
        <span
          class="c20"
        >
          Consultez
           
          <button
            class="c21 c22"
            type="button"
          >
            notre aide
          </button>
          .
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`<Contribution /> should render with generic answer 1`] = `
.c2 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: auto;
  text-align: left;
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 1rem;
    margin-left: auto;
  }
}

@media (max-width:600px) {
  .c1 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 2.2rem;
  }
}

<div>
  <section>
    <div
      class="c0"
    >
      <h2
        class="c1"
      >
        <span
          class="c2"
        />
        Que dit le code du travail ?
      </h2>
    </div>
    <div>
      <p>
        hello 
        <strong>
          world
        </strong>
      </p>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with generic answer and content 1`] = `
.c5 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  border: 1px solid #bbcadf;
  background-color: #fff;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c14 {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  width: auto;
  margin: 0;
}

.c13 {
  -webkit-flex: 0 0 2.8rem;
  -ms-flex: 0 0 2.8rem;
  flex: 0 0 2.8rem;
  width: 2.8rem;
  height: 2.1rem;
  margin: 0 1.6rem 0 0;
  padding-top: 0.6rem;
  color: #f66663;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c9:hover .c12 {
  -webkit-transform: translateX(4px);
  -ms-transform: translateX(4px);
  transform: translateX(4px);
}

.c7 {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: auto;
  text-align: left;
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c11 {
  padding: 0.8rem 0;
  font-weight: normal;
}

.c8 {
  padding-left: 0;
}

.c6 {
  margin-bottom: 2rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 2rem;
  font-size: 1.4rem;
}

@media (max-width:600px) {
  .c5 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c5 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c13 {
    -webkit-flex: 0 0 2rem;
    -ms-flex: 0 0 2rem;
    flex: 0 0 2rem;
    width: 2rem;
    height: 1.7rem;
    margin: 0 1rem 0 0;
  }
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 1rem;
    margin-left: auto;
  }
}

@media (max-width:600px) {
  .c1 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 2.2rem;
  }
}

@media (max-width:980px) {
  .c6 {
    margin-bottom: 1.6rem;
  }
}

@media (max-width:600px) {
  .c3 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:600px) {
  .c4 {
    display: none;
  }
}

<div>
  <section>
    <div
      class="c0"
    >
      <h2
        class="c1"
      >
        <span
          class="c2"
        />
        Que dit le code du travail ?
      </h2>
    </div>
    <div
      class="c3"
    >
      <span>
        Source :
         
        <a
          aria-label="Fiche: service-public.fr (nouvelle fenêtre)"
          href="https://service-public.fr/professionnels-entreprises/vosdroits/F33693"
          rel="noopener noreferrer"
          target="_blank"
        >
          Fiche: service-public.fr
        </a>
      </span>
      <span
        aria-hidden="true"
        class="c4"
      >
         - 
      </span>
      <span>
        Mis à jour le : 
        13/37/42
      </span>
    </div>
    <div>
      <p>
        hello 
        <strong>
          world
        </strong>
      </p>
    </div>
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        Références
      </div>
      <ul
        class="c7 c8"
      >
        <li>
          <a
            class="c9 c10 c11"
            href="/code-du-travail/l-1243"
          >
            <svg
              aria-hidden="true"
              class="c12 c13"
              fill="none"
              viewBox="0 0 28 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
                fill="currentColor"
              />
            </svg>
            <p
              class="c14"
            >
              Article L-1243 du Code du travail
            </p>
          </a>
        </li>
      </ul>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with no answer 1`] = `<div />`;
